<resources>
    <string name="app_name">Bhamashah</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bhamashah_passbook">Bhamashah Passbook</string>
    <string name="government_loans">Government Loans</string>
    <string name="custom_loan">Custom Loan</string>
    <string name="awairness">Awairness</string>
    <string name="home_banking">Home Banking</string>
    <string name="medical_for_girls">Medical for Girls</string>
    <string name="sos">SOS</string>
    <string name="medical">Medical</string>
    <string name="emergency">Emergency</string>
    <string name="special_services">Special Services</string>
    <string name="loan">Loan</string>
    <string name="other">Others</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>

    <string name="backdrop_title">Bhamashah yojan</string>
    <string name="backdrop_subtitle">Initiative of Rajashthan government</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banking_offers_and_service">Banking offers and Service</string>
    <string name="current_offers_and_scheme">Current offers and scheme</string>
    <string name="eligibility">Eligibility</string>
    <string name="career_and_others">Career and others</string>
    <string name="general">General</string>

    <string name="title_activity_login">Login </string>
    <string name="request_amount">Request amount</string>
    <string name="request">Request</string>
    <string name="exclusive">Exclusive</string>
    <string name="nominal">Nominal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Bhamashah ID </string>
    <string name="prompt_password">OTP</string>
    <string name="action_sign_in">Generate OTP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Bhamashah ID is invalid</string>
    <string name="error_invalid_password">This OTP is too short</string>
    <string name="error_incorrect_password">This OTP is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="normal_delivery_text">It will be delivered within 2-3 working days</string>
    <string name="request_amt_error">Enter request amount</string>
    <string name="no_records">No records</string>

</resources>
