<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ss_homeBanking"
            android:title="@string/home_banking" />
    </group>


        <item android:title="@string/banking_offers_and_service">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_bs_offers"
                        android:title="@string/current_offers_and_scheme" />
                    <item
                        android:id="@+id/nav_bs_eligibility"
                        android:title="@string/eligibility" />
                </group>
            </menu>
        </item>

        <item android:title="@string/awairness">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_ss_awiarness_general"
                        android:title="@string/general" />

                    <item
                        android:id="@+id/nav_ss_career"
                        android:title="@string/career_and_others" />
                </group>
            </menu>
        </item>

        <item android:title="@string/emergency">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_emergency_sos"
                        android:title="@string/sos" />
                    <item
                        android:id="@+id/nav_emergency_medical"
                        android:title="@string/medical" />
                </group>
            </menu>
        </item>


    <item android:title="@string/other">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_bhamashahPassbook"
                    android:title="@string/bhamashah_passbook" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            <item
                android:id="@+id/nav_share"
                android:title="@string/share" />
            </group>
        </menu>
    </item>

</menu>
