<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.bhamashah.fragments.HomeBankingFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="fill_parent"
            android:id="@+id/radioGroup"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton android:id="@+id/radio_nominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nominal"
                android:checked="true"
                />

            <RadioButton android:id="@+id/radio_exclusive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclusive"
                />
        </RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_amount"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comments(Optional)"
                android:inputType="text"
                android:maxLines="3"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_request"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/request"
            android:textStyle="bold" />

    </LinearLayout>



</FrameLayout>
